Added license to README

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+THIS_IS_AN_EXAMPLE_FILE=To properly get this to work, create your own file named ".env" and put information in using the format below
+
 SCRIPT_USERAGENT=com.reddit.exampleScript
 SCRIPT_CLIENTID=example_id
 SCRIPT_CLIENTSECRET=example_secret
